# steam-market-history-tool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_drop_lines_fixture.py  generate_multi_currency_fixture.py  generate_multi_currency_stress_fixture.py
src/steam_market_history/: __init__.py  acquisition.py  cli.py  filters.py  models.py  money.py  pairing.py  parser.py  prices.py  stats.py  unrealized.py
tests/: test_acquisition.py  test_cli.py  test_drop_lines_fixture.py  test_filters.py  test_integration.py  test_money.py  test_multi_currency_fixtures.py  test_pairing.py  test_parser.py  test_prices.py  test_stats.py  test_unrealized.py
tests/fixtures/: drop_lines_history.json  multi_currency_history.json  multi_currency_stress_history.json  sample_history.json
